<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/top"
            android:layout_marginLeft="70dip"
            android:text="xxx" />

        <TextView
            android:id="@+id/center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top"
            android:text="@string/file_size" />

        <TextView
            android:id="@+id/space"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top"
            android:layout_marginLeft="70dip"
            android:text="KB" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center"
            android:text="@string/update_time" />

        <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center"
            android:layout_marginLeft="70dip"
            android:text="123" />
    </RelativeLayout>
</LinearLayout>
