<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout style="@style/TitleBar">

        <Button
            android:id="@+id/back_button"
            android:layout_width="47dip"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_selector" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleTextWhite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_button"
            android:gravity="center"
            android:paddingRight="47dp"
            android:text="@string/myfile" />

        <Button
            android:id="@+id/more_button"
            android:layout_width="47dip"
            android:layout_height="51dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/more_selector"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/listV"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLinear"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butt1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/butt2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
